// Vitest Snapshot v1

exports[`CdrBanner > with icon-left slot > renders correctly 1`] = `
<div
  class="cdr-banner cdr-banner--default"
>
  <div
    class="cdr-banner__wrapper undefined"
  >
    <div
      class="cdr-banner__main"
    >
      <div
        class="cdr-banner__icon-left"
      >
        
        <div />
        
      </div>
      <span
        class="cdr-banner__message"
      >
        
        hey im a banner
        
      </span>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
  <!--v-if-->
</div>
`;

exports[`CdrBanner > with icon-right slot > renders correctly 1`] = `
<div
  class="cdr-banner cdr-banner--default"
>
  <div
    class="cdr-banner__wrapper undefined"
  >
    <div
      class="cdr-banner__main"
    >
      <div
        class="cdr-banner__icon-left"
      >
        
        <div />
        
      </div>
      <span
        class="cdr-banner__message"
      >
        
        hey im a banner
        
      </span>
      <div
        class="cdr-banner__icon-right"
      >
        
        <div />
        
      </div>
    </div>
    <!--v-if-->
  </div>
  <!--v-if-->
</div>
`;

exports[`CdrBanner > with info-action slot > renders correctly 1`] = `
<div
  class="cdr-banner cdr-banner--default"
>
  <div
    class="cdr-banner__wrapper undefined"
  >
    <div
      class="cdr-banner__main"
    >
      <div
        class="cdr-banner__icon-left"
      >
        
        <div />
        
      </div>
      <span
        class="cdr-banner__message"
      >
        
        hey im a banner
        
      </span>
      <div
        class="cdr-banner__icon-right"
      >
        
        <div />
        
      </div>
    </div>
    <!--v-if-->
  </div>
  <div
    class="cdr-banner__info-action"
  >
    
    <div />
    
  </div>
</div>
`;

exports[`CdrBanner > with just the default slot > with "type" prop set to "info" > renders correctly 1`] = `
<div
  class="cdr-banner cdr-banner--info"
>
  <div
    class="cdr-banner__wrapper undefined"
  >
    <div
      class="cdr-banner__main"
    >
      <!--v-if-->
      <span
        class="cdr-banner__message"
      >
        
        hey im a banner
        
      </span>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
  <!--v-if-->
</div>
`;

exports[`CdrBanner > with message-body slot > renders correctly 1`] = `
<div
  class="cdr-banner cdr-banner--default"
>
  <div
    class="cdr-banner__wrapper cdr-banner__wrapper--prominence"
  >
    <div
      class="cdr-banner__main"
    >
      <div
        class="cdr-banner__icon-left"
      >
        
        <div />
        
      </div>
      <span
        class="cdr-banner__message"
      >
        
        hey im a banner
        
      </span>
      <!--v-if-->
    </div>
    <div
      class="cdr-banner__message-body"
    >
      
      and I am some extra information
      
    </div>
  </div>
  <!--v-if-->
</div>
`;
